--- a/index.html
+++ b/index.html
@@ -1,19 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>EXCURSION FILE</title>
-
+   <title>Excursion Application </title>
+   <link href="resources/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
-<h1>start of a new file</h1>
+<body>
 
-<h1>new line on Atom script writer and not thru GH.</h1>
-  <h2>test test test</h2>
+<div>
+    <h1 id="mainHeader">Discover hidden places in the world around you</h1>
+    <p id="underlined"><u>Download Excursion (Coming soon!)</u></p>
+</div>
 
-  <p>dsjcvhsdjcvhdsvdsjvbdjvbdfjvbdfjvbdsjvlbdsfjvbdsfjvbdfjkvbdsjkvbdsfjvbds
-    jvbdfjkvbdsfjvbdjvkbd</p>
+<video id="video" autoplay control loop>
+  <source src="resources/videos/excursion.mp4" type="video/mp4">
+</video>
 
+<!--this is where the vide goes -->
 
+<div>
+    <h2 id="secondHeader">Your personal travel guide</h2>
+    <p id="fourthPara">Excursion remembers places you like, and recommends new point of interest around you</p>
+</div>
 
+<div id="camp">
+    <img src="resources/images/camp.jpg">
+<!--this is there the picture goes -->
+</div>
+
+<br />
+<div>
+<!--this is where the small B&W cell phone goes-->
+<div id="cell">
+   <img src="resources/images/phone.png">
+<!--this is there the picture goes -->
+</div>
+
+<div>
+<p id="lastHeading">Coming Soon for iPhone and Android</p>
+<p id="underlined"><u>Download Excursion (Coming soon!)</u></p>
+
+<br /><p id="c-logo">© Excursion</p>
+</div>
+
+</body>
 
 </html>
